--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ p {
   display: flex;
   justify-content: space-between;
   height: 2.75rem;
-  padding: 1.25rem 0;
+  margin: 1.25rem 0;
 }
 
 .hover {
