--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,4 +79,139 @@ p {
 
 /* !Grid Style */
 
+.shop {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(19, 1fr);
+}
+
+.card:nth-child(1) {
+  grid-column: 1/3;
+  grid-row: 1/4;
+}
+.card:nth-child(2) {
+  grid-column: 3/4;
+  grid-row: 1/2;
+}
+.card:nth-child(3) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(4) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(5) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(6) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(7) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(8) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(9) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(10) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(11) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(12) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(13) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(14) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(15) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(16) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(17) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(18) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(19) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(20) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(21) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(22) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(23) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(24) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(25) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(26) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(27) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(28) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(29) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(30) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(31) {
+  grid-column: ;
+  grid-row: ;
+}
+.card:nth-child(32) {
+  grid-column: ;
+  grid-row: ;
+}
+
 /* !Footer Style */
