--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,12 @@
 
 html {
   font-size: 62.5%;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   font-family: Karla, Arial, Helvetica, sans-serif;
 }
 
 main {
-  padding: 2.5rem;
+  margin: 2.5rem auto;
 }
 
 ul {
@@ -32,23 +32,6 @@ a {
   color: #000;
 }
 
-/* !Header Style */
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 6.5rem;
-  padding: 2.5rem;
-  font-size: 1rem;
-}
-
-ul {
-  display: flex;
-  justify-content: space-between;
-  gap: 3rem;
-}
-
 h2,
 p {
   font-size: 1rem;
@@ -59,18 +42,44 @@ p {
   color: #848484;
 }
 
-/* !Card Style */
-
-.card {
-  display: flex;
-  flex-direction: column;
+footer p {
+  color: #000;
 }
+
+footer a {
+  color: #323a45;
+}
+
+/* !Header Style */
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 6.5rem;
+  margin: 2.5rem;
+  font-size: 1rem;
+}
+
+ul {
+  display: flex;
+  justify-content: space-between;
+  gap: 3rem;
+}
+
+/* !Card Style */
 
 .description {
   display: flex;
   justify-content: space-between;
   height: 2.75rem;
   margin: 1.25rem 0;
+  width: 100%;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
 
 .hover {
@@ -81,137 +90,76 @@ p {
 
 .shop {
   display: grid;
+  gap: 20px;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(19, 1fr);
+  align-content: start;
+  justify-content: center;
+  align-items: start;
 }
 
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: start;
+  height: fit-content;
+  justify-self: center;
+}
+
+/* - ---------- großes bild #1 ---------- */
 .card:nth-child(1) {
-  grid-column: 1/3;
-  grid-row: 1/4;
-}
-.card:nth-child(2) {
-  grid-column: 3/4;
+  grid-column: 1/4;
   grid-row: 1/2;
+  justify-self: center;
 }
-.card:nth-child(3) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(4) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(5) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(6) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(7) {
-  grid-column: ;
-  grid-row: ;
-}
+
+/* - ---------- großes bild #2 ---------- */
 .card:nth-child(8) {
-  grid-column: ;
-  grid-row: ;
+  grid-column: 1/4;
+  grid-row: 4/5;
 }
-.card:nth-child(9) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(10) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(11) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(12) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(13) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(14) {
-  grid-column: ;
-  grid-row: ;
-}
+
+/* - ---------- großes bild #3 ---------- */
 .card:nth-child(15) {
-  grid-column: ;
-  grid-row: ;
+  grid-column: 1/4;
+  grid-row: 7/8;
 }
-.card:nth-child(16) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(17) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(18) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(19) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(20) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(21) {
-  grid-column: ;
-  grid-row: ;
-}
+
+/* - ---------- großes bild #4 ---------- */
 .card:nth-child(22) {
-  grid-column: ;
-  grid-row: ;
+  grid-column: 1/4;
+  grid-row: 10/11;
 }
-.card:nth-child(23) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(24) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(25) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(26) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(27) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(28) {
-  grid-column: ;
-  grid-row: ;
-}
+
+/* - ---------- großes bild #5 ---------- */
 .card:nth-child(29) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(30) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(31) {
-  grid-column: ;
-  grid-row: ;
-}
-.card:nth-child(32) {
-  grid-column: ;
-  grid-row: ;
+  grid-column: 1/4;
+  grid-row: 13/14;
 }
 
 /* !Footer Style */
+
+.footer-flex {
+  display: flex;
+  flex-direction: column;
+  margin: 2.5rem auto;
+}
+
+.info-section {
+  display: grid;
+  grid-template-columns: 2fr 1fr 2fr 1fr;
+}
+
+/* !Media */
+
+@media (min-width: 1440px) {
+  .shop {
+    width: 1320px;
+  }
+  header,
+  main,
+  footer {
+    max-width: 1320px;
+    margin: 0 auto;
+  }
+}
