--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
   font-family: Karla;
   src: url("../fonts/Karla/static/Karla-Regular.ttf");
 }
+
 *,
 *::before,
 ::after {
@@ -10,7 +11,7 @@
   padding: 0;
 }
 
-/* !General Styles */
+/* ! ---------- General Styles ---------- */
 
 html {
   font-size: 62.5%;
@@ -20,10 +21,15 @@ html {
 
 main {
   margin: 2.5rem auto;
+  max-width: 1320px;
 }
 
-ul {
-  list-style: none;
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1rem;
 }
 
 a {
@@ -32,42 +38,33 @@ a {
   color: #000;
 }
 
-h2,
 p {
   font-size: 1rem;
-  font-weight: 400;
-}
-
-p {
   color: #848484;
 }
 
-footer p {
-  color: #000;
-}
-
-footer a {
-  color: #323a45;
-}
-
-/* !Header Style */
+/* ! ---------- Header Style ---------- */
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 6.5rem;
-  margin: 2.5rem;
+  margin: 2.5rem auto;
   font-size: 1rem;
+  color: #323a45;
+  text-transform: uppercase;
+  padding: 0 2.5rem;
 }
 
 ul {
+  list-style: none;
   display: flex;
   justify-content: space-between;
   gap: 3rem;
 }
 
-/* !Card Style */
+/* ! ---------- Card Style ---------- */
 
 .description {
   display: flex;
@@ -86,15 +83,16 @@ img {
   display: none;
 }
 
-/* !Grid Style */
+/* ! ---------- Grid Style ---------- */
 
 .shop {
   display: grid;
-  gap: 20px;
+  gap: 2rem;
   grid-template-columns: repeat(3, 1fr);
   align-content: start;
   justify-content: center;
   align-items: start;
+  padding: 0 2.5rem;
 }
 
 .card {
@@ -110,7 +108,7 @@ img {
 .card:nth-child(1) {
   grid-column: 1/4;
   grid-row: 1/2;
-  justify-self: center;
+  width: 100%;
 }
 
 /* - ---------- großes bild #2 ---------- */
@@ -137,29 +135,52 @@ img {
   grid-row: 13/14;
 }
 
-/* !Footer Style */
+/* ! ---------- Footer Style ----------*/
 
 .footer-flex {
   display: flex;
   flex-direction: column;
   margin: 2.5rem auto;
+  padding: 0 2.5rem;
 }
 
 .info-section {
   display: grid;
   grid-template-columns: 2fr 1fr 2fr 1fr;
+  height: 8rem;
+  margin-bottom: 6rem;
 }
 
-/* !Media */
+footer h3 {
+  margin-bottom: 3rem;
+}
 
-@media (min-width: 1440px) {
-  .shop {
-    width: 1320px;
-  }
-  header,
-  main,
-  footer {
-    max-width: 1320px;
-    margin: 0 auto;
-  }
+footer a {
+  color: #323a45;
+  display: block;
+  font-size: 1rem;
+}
+
+footer p {
+  color: #000;
+  font-size: 1.2rem;
+  margin-right: 2rem;
+  line-height: 2rem;
+}
+
+.copyright p {
+  color: #848484;
+}
+
+.info,
+.newsletter p {
+  padding-right: 5rem;
+}
+
+span {
+  font-weight: bold;
+}
+
+.italic {
+  font-style: italic;
 }
