--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -26,6 +26,7 @@
   ul {
     flex-direction: column;
     gap: 1rem;
+    align-items: flex-end;
   }
 
   /* - --- große bilder --- */
@@ -38,10 +39,24 @@
     grid-row: auto;
   }
 
+  .card {
+    align-items: center;
+  }
+
+  .card img {
+    height: 35rem;
+    width: 35rem;
+    object-fit: cover;
+  }
+  .description {
+    width: 35rem;
+  }
+
   /* --- footer --- */
   .footer-flex {
-    max-width: 44rem;
-    margin-left: 0;
+    width: 35rem;
+    margin: 0 auto;
+    align-items: center;
   }
 
   footer p {
@@ -56,7 +71,7 @@
   }
 
   .copyright {
-    margin-top: 10rem;
+    margin-top: 12rem;
   }
 
   footer h3 {
